@@ -22,7 +22,7 @@ import org.checkerframework.framework.source.SupportedOptions;
 @SupportedOptions({
     ValueChecker.REPORT_EVAL_WARNS,
     ValueChecker.IGNORE_RANGE_OVERFLOW,
-    ValueChecker.NULL_STRINGS_CONCATENATION
+    ValueChecker.NON_NULL_STRINGS_CONCATENATION
 })
 public class ValueChecker extends BaseTypeChecker {
     /**
@@ -33,7 +33,7 @@ public class ValueChecker extends BaseTypeChecker {
     /** Command-line option to ignore the possibility of overflow for range annotations. */
     public static final String IGNORE_RANGE_OVERFLOW = "ignoreRangeOverflow";
     /** Command-line option that assumes most expressions in String concatenations can be null. */
-    public static final String NULL_STRINGS_CONCATENATION = "nullStringsConcatenation";
+    public static final String NON_NULL_STRINGS_CONCATENATION = "nonNullStringsConcatenation";
 
     @Override
     protected BaseTypeVisitor<?> createSourceVisitor() {
