@@ -1,0 +1,2 @@
+The files in this directory are slight variants of those in ../value/ .
+The two versions should be kept in sync.
