@@ -55,7 +55,13 @@ public class CompoundAssignment {
         @IntVal(0) int zero = 0;
         zero *= 12;
 
+        @StringVal("null") String s = "null";
+        s += "";
+    }
+
+    void errorCompundAssignments() {
         @StringVal("hello") String s = "hello";
+        // :: error: (compound.assignment.type.incompatible)
         s += "";
     }
 }
