@@ -1,3 +1,8 @@
+New command-line option `-AnoNullStringsConcatenation` unsoundly assumes
+that every operand of a String concatenation is non-null.
+
+---------------------------------------------------------------------------
+
 Version 3.0.1, December 1, 2019
 
 Implementation detials:
